CSS, Encabezado html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>DIFUSIÓN UG COMUNICA</title>
 	<meta charset="utf-8"/>
+	<link rel="stylesheet" type="text/css" href="style/style.css" />
 </head>
 <body>
 	<center>
@@ -13,7 +14,7 @@
     		<!--Escudo-->
 			<img src="http://www.ugto.mx/campusleon/images/boletin/emblema_dorado.png" alt="Escudo Universidad de Guanajuato" style=" border:none; height:auto; width:250px;"/>
 			<!--Título de carta-->
-			<div style="background-color:#153357; display:inline-block; border-left:3px solid #9f925d; min-width:300px; width:690px; vertical-align:top;">
+			<div class="head" style="display:inline-block; border-left:3px solid #9f925d; min-width:300px; width:690px; vertical-align:top;">
 		    	<h1 style="color:#ffffff; font-size:38px; font-weight:bold !important; line-height:94%; padding-left:20px;">Mensaje Semanal<br/><span style="color:#d7d6d3;">Rectoría UG León</span></h1>
 		    	<p style="color:#FFFFFF; font-size:15px; padding:0px 0px 20px 20px;"><strong>30 de mayo de 2016 </strong></p>
 		    </div><!--Cierre de título-->
